fix: Abyss: Menu arrows and accelerators hard to see http://bugs.activestate.com/show_bug.cgi?id=99556
(integrated from komodo (trunk) change 81665 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13545 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -139,6 +139,7 @@
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
+@icon-menu-arrow:               disabled;
 
 /* Browser Icons */
 @icon-browser-firefox:          url("@{icon-url-prefix}firefox.png");
