--- a/src/chrome/komodo/skin/plat/shared/_config/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/menus.less
@@ -38,3 +38,4 @@
 @menupopup-separator-appearance:        disabled;
 @menupopup-separator-background:        disabled;
 @menupopup-separator-color:             disabled;
+@menupopup-menu-arrow-appearance:       disabled;
