--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -128,7 +128,12 @@ treechildren::-moz-tree-checkbox(syncError)
     list-style-image: none !important;
 }
 
+/* Menu Icons */
 
+menu .menu-right
+{
+    list-style-image: @icon-menu-arrow;
+}
 
 /* Folder Icons */
 
