--- a/src/chrome/komodo/skin/plat/shared/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/menus.less
@@ -108,6 +108,11 @@ menupopup
         {
             color: @menupopup-accelerator-color;
         }
+
+        .menu-right
+        {
+            -moz-appearance: @menupopup-menu-arrow-appearance;
+        }
     }
 
     menuseparator
