--- a/src/modules/abyss_skin/skin/_config/icons.less
+++ b/src/modules/abyss_skin/skin/_config/icons.less
@@ -10,3 +10,5 @@
 @icon-radio:                    url("@{icon-url-prefix}radio-unchecked.png");
 @icon-radio-selected:           url("@{icon-url-prefix}radio-checked.png");
 @icon-radio-background:         none;
+
+@icon-menu-arrow:               url("@{icon-url-prefix}arrow-right3.png");
