--- a/src/modules/abyss_skin/skin/_config/menus.less
+++ b/src/modules/abyss_skin/skin/_config/menus.less
@@ -34,7 +34,8 @@
 @menupopup-border:                      2px solid lighten(@main-border-color, 5%);
 @menupopup-background-active:           -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.2) 100%);
 @menupopup-color-active:                lighten(@window-color, 10%);
-@menupopup-disabled-color:              fade(@window-color, 30%);
-@menupopup-accelerator-color:           fade(@window-color, 15%);
+@menupopup-disabled-color:              fade(@window-color, 35%);
+@menupopup-accelerator-color:           fade(@window-color, 35%);
 @menupopup-separator-appearance:        none;
 @menupopup-separator-background:        -moz-linear-gradient(left, fade(@window-background, 100%) 0%, rgba(80, 157, 212, 0.2) 50%, fade(@window-background, 100%) 100%);
+@menupopup-menu-arrow-appearance:       none;
